Fixed visual bugs on safari

--- a/src/components/NavigationBar/NavigationBar.styl
+++ b/src/components/NavigationBar/NavigationBar.styl
@@ -26,9 +26,10 @@
         font-weight $bold !important
         font-style italic
 
-    button
+    .sidebar-toggle
       position fixed
-      top 8px
+      top 11px
+      left 10px
 
     .icon
       color $white
