--- a/src/containers/App/SidebarMenu/SidebarMenu.styl
+++ b/src/containers/App/SidebarMenu/SidebarMenu.styl
@@ -22,10 +22,11 @@
       i
         display inline-block
         margin 0 !important
-        padding-right 1rem
+        padding-right 2.5rem
         color $purple_medium
         font-size 1.75rem !important
         vertical-align middle
 
         &.logo
+          padding-right 0
           font-size 4rem !important
